// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`plugins/discourse/fetch snapshot testing loads a particular post from snapshot 1`] = `
Object {
  "authorUsername": "d11",
  "cooked": "<p>This is a test post.</p>
<p>EDIT: This test post was edited on October 24, 2019.</p>",
  "id": 14,
  "indexWithinTopic": 1,
  "replyToPostIndex": null,
  "timestampMs": 1564744349476,
  "topicId": 11,
}
`;

exports[`plugins/discourse/fetch snapshot testing loads a particular topic from snapshot 1`] = `
Object {
  "posts": Array [
    Object {
      "authorUsername": "d11",
      "cooked": "<p>This is a test post.</p>
<p>EDIT: This test post was edited on October 24, 2019.</p>",
      "id": 14,
      "indexWithinTopic": 1,
      "replyToPostIndex": null,
      "timestampMs": 1564744349476,
      "topicId": 11,
    },
    Object {
      "authorUsername": "dl-proto",
      "cooked": "<p>Ah, an excellent post. I will like it and reply.</p>",
      "id": 16,
      "indexWithinTopic": 2,
      "replyToPostIndex": null,
      "timestampMs": 1564744496285,
      "topicId": 11,
    },
    Object {
      "authorUsername": "d11",
      "cooked": "<p>Adding another post, after having deleted a whole thread.</p>",
      "id": 22,
      "indexWithinTopic": 3,
      "replyToPostIndex": null,
      "timestampMs": 1564951839667,
      "topicId": 11,
    },
  ],
  "topic": Object {
    "authorUsername": "d11",
    "categoryId": 1,
    "id": 11,
    "timestampMs": 1564744349408,
    "title": "My First Test Post",
  },
}
`;

exports[`plugins/discourse/fetch snapshot testing loads a topic with pagination from snapshot 1`] = `
Object {
  "posts": Array [
    Object {
      "authorUsername": "beanow.sc-test",
      "cooked": "<p>This topic will have 2 pages.<br>
Needing at least &gt; 20 posts.</p>",
      "id": 34,
      "indexWithinTopic": 1,
      "replyToPostIndex": null,
      "timestampMs": 1573839733554,
      "topicId": 26,
    },
    Object {
      "authorUsername": "beanow.sc-test",
      "cooked": "<p>The quick brown fox jumps over the lazy dog.</p>
<h2>Post <span class=\\"hashtag\\">#2</span>
</h2>",
      "id": 35,
      "indexWithinTopic": 2,
      "replyToPostIndex": null,
      "timestampMs": 1573839810871,
      "topicId": 26,
    },
    Object {
      "authorUsername": "beanow.sc-test",
      "cooked": "<p>The quick brown fox jumps over the lazy dog.</p>
<h2>Post <span class=\\"hashtag\\">#3</span>
</h2>",
      "id": 36,
      "indexWithinTopic": 3,
      "replyToPostIndex": null,
      "timestampMs": 1573839814701,
      "topicId": 26,
    },
    Object {
      "authorUsername": "beanow.sc-test",
      "cooked": "<p>The quick brown fox jumps over the lazy dog.</p>
<h2>Post <span class=\\"hashtag\\">#4</span>
</h2>",
      "id": 37,
      "indexWithinTopic": 4,
      "replyToPostIndex": null,
      "timestampMs": 1573839818330,
      "topicId": 26,
    },
    Object {
      "authorUsername": "beanow.sc-test",
      "cooked": "<p>The quick brown fox jumps over the lazy dog.</p>
<h2>Post <span class=\\"hashtag\\">#5</span>
</h2>",
      "id": 38,
      "indexWithinTopic": 5,
      "replyToPostIndex": null,
      "timestampMs": 1573839821821,
      "topicId": 26,
    },
    Object {
      "authorUsername": "beanow.sc-test",
      "cooked": "<p>The quick brown fox jumps over the lazy dog.</p>
<h2>Post <span class=\\"hashtag\\">#6</span>
</h2>",
      "id": 39,
      "indexWithinTopic": 6,
      "replyToPostIndex": null,
      "timestampMs": 1573839825601,
      "topicId": 26,
    },
    Object {
      "authorUsername": "beanow.sc-test",
      "cooked": "<p>The quick brown fox jumps over the lazy dog.</p>
<h2>Post <span class=\\"hashtag\\">#7</span>
</h2>",
      "id": 40,
      "indexWithinTopic": 7,
      "replyToPostIndex": null,
      "timestampMs": 1573839828825,
      "topicId": 26,
    },
    Object {
      "authorUsername": "beanow.sc-test",
      "cooked": "<p>The quick brown fox jumps over the lazy dog.</p>
<h2>Post <span class=\\"hashtag\\">#8</span>
</h2>",
      "id": 41,
      "indexWithinTopic": 8,
      "replyToPostIndex": null,
      "timestampMs": 1573839832023,
      "topicId": 26,
    },
    Object {
      "authorUsername": "beanow.sc-test",
      "cooked": "<p>The quick brown fox jumps over the lazy dog.</p>
<h2>Post <span class=\\"hashtag\\">#9</span>
</h2>",
      "id": 42,
      "indexWithinTopic": 9,
      "replyToPostIndex": null,
      "timestampMs": 1573839835298,
      "topicId": 26,
    },
    Object {
      "authorUsername": "beanow.sc-test",
      "cooked": "<p>The quick brown fox jumps over the lazy dog.</p>
<h2>Post <span class=\\"hashtag\\">#10</span>
</h2>",
      "id": 43,
      "indexWithinTopic": 10,
      "replyToPostIndex": null,
      "timestampMs": 1573839840261,
      "topicId": 26,
    },
    Object {
      "authorUsername": "beanow.sc-test",
      "cooked": "<p>The quick brown fox jumps over the lazy dog.</p>
<h2>Post <span class=\\"hashtag\\">#11</span>
</h2>",
      "id": 44,
      "indexWithinTopic": 11,
      "replyToPostIndex": null,
      "timestampMs": 1573839843418,
      "topicId": 26,
    },
    Object {
      "authorUsername": "beanow.sc-test",
      "cooked": "<p>The quick brown fox jumps over the lazy dog.</p>
<h2>Post <span class=\\"hashtag\\">#12</span>
</h2>",
      "id": 45,
      "indexWithinTopic": 12,
      "replyToPostIndex": null,
      "timestampMs": 1573839846537,
      "topicId": 26,
    },
    Object {
      "authorUsername": "beanow.sc-test",
      "cooked": "<p>The quick brown fox jumps over the lazy dog.</p>
<h2>Post <span class=\\"hashtag\\">#13</span>
</h2>",
      "id": 46,
      "indexWithinTopic": 13,
      "replyToPostIndex": null,
      "timestampMs": 1573839849459,
      "topicId": 26,
    },
    Object {
      "authorUsername": "beanow.sc-test",
      "cooked": "<p>The quick brown fox jumps over the lazy dog.</p>
<h2>Post <span class=\\"hashtag\\">#14</span>
</h2>",
      "id": 47,
      "indexWithinTopic": 14,
      "replyToPostIndex": null,
      "timestampMs": 1573839852186,
      "topicId": 26,
    },
    Object {
      "authorUsername": "beanow.sc-test",
      "cooked": "<p>The quick brown fox jumps over the lazy dog.</p>
<h2>Post <span class=\\"hashtag\\">#15</span>
</h2>",
      "id": 48,
      "indexWithinTopic": 15,
      "replyToPostIndex": null,
      "timestampMs": 1573839855068,
      "topicId": 26,
    },
    Object {
      "authorUsername": "beanow.sc-test",
      "cooked": "<p>The quick brown fox jumps over the lazy dog.</p>
<h2>Post <span class=\\"hashtag\\">#16</span>
</h2>",
      "id": 49,
      "indexWithinTopic": 16,
      "replyToPostIndex": null,
      "timestampMs": 1573839857787,
      "topicId": 26,
    },
    Object {
      "authorUsername": "beanow.sc-test",
      "cooked": "<p>The quick brown fox jumps over the lazy dog.</p>
<h2>Post <span class=\\"hashtag\\">#17</span>
</h2>",
      "id": 50,
      "indexWithinTopic": 17,
      "replyToPostIndex": null,
      "timestampMs": 1573839860730,
      "topicId": 26,
    },
    Object {
      "authorUsername": "beanow.sc-test",
      "cooked": "<p>The quick brown fox jumps over the lazy dog.</p>
<h2>Post <span class=\\"hashtag\\">#18</span>
</h2>",
      "id": 51,
      "indexWithinTopic": 18,
      "replyToPostIndex": null,
      "timestampMs": 1573839863576,
      "topicId": 26,
    },
    Object {
      "authorUsername": "beanow.sc-test",
      "cooked": "<p>The quick brown fox jumps over the lazy dog.</p>
<h2>Post <span class=\\"hashtag\\">#19</span>
</h2>",
      "id": 52,
      "indexWithinTopic": 19,
      "replyToPostIndex": null,
      "timestampMs": 1573839866548,
      "topicId": 26,
    },
    Object {
      "authorUsername": "beanow.sc-test",
      "cooked": "<p>The quick brown fox jumps over the lazy dog.</p>
<h2>Post <span class=\\"hashtag\\">#20</span>
</h2>",
      "id": 53,
      "indexWithinTopic": 20,
      "replyToPostIndex": null,
      "timestampMs": 1573839869555,
      "topicId": 26,
    },
    Object {
      "authorUsername": "beanow.sc-test",
      "cooked": "<p>The quick brown fox jumps over the lazy dog.</p>
<h2>Post <span class=\\"hashtag\\">#21</span>
</h2>",
      "id": 54,
      "indexWithinTopic": 21,
      "replyToPostIndex": null,
      "timestampMs": 1573839872244,
      "topicId": 26,
    },
  ],
  "topic": Object {
    "authorUsername": "beanow.sc-test",
    "categoryId": 6,
    "id": 26,
    "timestampMs": 1573839733506,
    "title": "Big Filler Topic 1",
  },
}
`;

exports[`plugins/discourse/fetch snapshot testing loads latest posts from snapshot 1`] = `
Array [
  Object {
    "authorUsername": "d11",
    "cooked": "<p>Here is a mention: <a class=\\"mention\\" href=\\"/u/dl-proto\\">@dl-proto</a><br>
Here is a topic reference:  <a href=\\"https://sourcecred-test.discourse.group/t/123-a-post-with-numbers-in-slug/20/\\" class=\\"inline-onebox\\">123 a post with numbers in slug</a><br>
Here is a post reference with a slug: <a href=\\"https://sourcecred-test.discourse.group/t/my-first-test-post/11/4\\" class=\\"inline-onebox\\">My First Test Post</a></p>",
    "id": 29,
    "indexWithinTopic": 1,
    "replyToPostIndex": null,
    "timestampMs": 1571855191281,
    "topicId": 21,
  },
  Object {
    "authorUsername": "d11",
    "cooked": "<p>Oh the post won’t be empty I assure you.</p>",
    "id": 28,
    "indexWithinTopic": 1,
    "replyToPostIndex": null,
    "timestampMs": 1570420159922,
    "topicId": 20,
  },
  Object {
    "authorUsername": "d11",
    "cooked": "<p>I’m replying to a wiki.</p>",
    "id": 27,
    "indexWithinTopic": 2,
    "replyToPostIndex": null,
    "timestampMs": 1570049836311,
    "topicId": 19,
  },
  Object {
    "authorUsername": "d11",
    "cooked": "<p>So I’m starting the wiki content.</p>
<p>No remove that line.</p>
<p>Ah now I’ve added another line.</p>",
    "id": 26,
    "indexWithinTopic": 1,
    "replyToPostIndex": null,
    "timestampMs": 1570049491743,
    "topicId": 19,
  },
  Object {
    "authorUsername": "d11",
    "cooked": "<p>Testing a poll. Let’s see how it works.</p>
<div class=\\"poll\\" data-poll-status=\\"open\\" data-poll-max=\\"5\\" data-poll-min=\\"1\\" data-poll-public=\\"true\\" data-poll-results=\\"always\\" data-poll-type=\\"multiple\\" data-poll-name=\\"poll\\">
<div>
<div class=\\"poll-container\\">
<ul>
<li data-poll-option-id=\\"159d8e412be4679f2d98fb5f0d0cce91\\">One</li>
<li data-poll-option-id=\\"2cbb44549228f1cf22e44fba86b6db21\\">Two</li>
<li data-poll-option-id=\\"7016bd7a00c7caff922822b2910a564a\\">Three</li>
<li data-poll-option-id=\\"d2bb44ccb6b19c98cc57f5b8bb87effe\\">Four</li>
<li data-poll-option-id=\\"c677eae47d33ca9b527e7ea7bb29612c\\">Five</li>
</ul>
</div>
<div class=\\"poll-info\\">
<p>
<span class=\\"info-number\\">0</span>
<span class=\\"info-label\\">voters</span>
</p>
</div>
</div>
</div>",
    "id": 25,
    "indexWithinTopic": 1,
    "replyToPostIndex": null,
    "timestampMs": 1570049410625,
    "topicId": 18,
  },
  Object {
    "authorUsername": "d11",
    "cooked": "<p>Adding another post, after having deleted a whole thread.</p>",
    "id": 22,
    "indexWithinTopic": 3,
    "replyToPostIndex": null,
    "timestampMs": 1564951839667,
    "topicId": 11,
  },
  Object {
    "authorUsername": "d11",
    "cooked": "<aside class=\\"quote no-group\\" data-post=\\"1\\" data-topic=\\"13\\">
<div class=\\"title\\">
<div class=\\"quote-controls\\"></div>
<img alt width=\\"20\\" height=\\"20\\" src=\\"https://avatars.discourse.org/v4/letter/d/8797f3/40.png\\" class=\\"avatar\\"> dl-proto:</div>
<blockquote>
<p>Here is a link to another discourse thread:</p>
</blockquote>
</aside>
<p>Excellent link. I’ve quoted you.</p>",
    "id": 18,
    "indexWithinTopic": 2,
    "replyToPostIndex": null,
    "timestampMs": 1564744591313,
    "topicId": 13,
  },
  Object {
    "authorUsername": "dl-proto",
    "cooked": "<p>Here is a link to another discourse thread: <a href=\\"https://sourcecred-test.discourse.group/t/my-first-test-post/11/3\\" class=\\"inline-onebox\\">My First Test Post</a></p>
<p>Here is a link to a GitHub issue: <a href=\\"https://github.com/sourcecred-test/example-github/issues/1\\" rel=\\"nofollow noopener\\">https://github.com/sourcecred-test/example-github/issues/1</a></p>",
    "id": 17,
    "indexWithinTopic": 1,
    "replyToPostIndex": null,
    "timestampMs": 1564744553905,
    "topicId": 13,
  },
  Object {
    "authorUsername": "dl-proto",
    "cooked": "<p>Ah, an excellent post. I will like it and reply.</p>",
    "id": 16,
    "indexWithinTopic": 2,
    "replyToPostIndex": null,
    "timestampMs": 1564744496285,
    "topicId": 11,
  },
  Object {
    "authorUsername": "d11",
    "cooked": "<p>This is a test post.</p>
<p>EDIT: This test post was edited on October 24, 2019.</p>",
    "id": 14,
    "indexWithinTopic": 1,
    "replyToPostIndex": null,
    "timestampMs": 1564744349476,
    "topicId": 11,
  },
  Object {
    "authorUsername": "system",
    "cooked": "<p>This is a test instance.<br>
The first paragraph of this pinned topic will be visible as a welcome message to all new visitors on your homepage. It’s important!</p>
<p><strong>Edit this</strong> into a brief description of your community:</p>
<ul>
<li>Who is it for?</li>
<li>What can they find here?</li>
<li>Why should they come here?</li>
<li>Where can they read more (links, resources, etc)?</li>
</ul>
<p><img src=\\"https://sjc3.discourse-cdn.com/free1/images/welcome/discourse-edit-post-animated.gif\\" width=\\"508\\" height=\\"106\\"></p>
<p>You may want to close this topic via the admin <img src=\\"https://sjc3.discourse-cdn.com/free1/images/emoji/twitter/wrench.png?v=9\\" title=\\":wrench:\\" class=\\"emoji\\" alt=\\":wrench:\\"> (at the upper right and bottom), so that replies don’t pile up on an announcement.</p>",
    "id": 10,
    "indexWithinTopic": 1,
    "replyToPostIndex": null,
    "timestampMs": 1554236412933,
    "topicId": 7,
  },
  Object {
    "authorUsername": "system",
    "cooked": "<p>Discussion about this site, its organization, how it works, and how we can improve it.</p>",
    "id": 1,
    "indexWithinTopic": 1,
    "replyToPostIndex": null,
    "timestampMs": 1554236409844,
    "topicId": 1,
  },
]
`;

exports[`plugins/discourse/fetch snapshot testing loads user likes from snapshot 1`] = `
Array [
  Object {
    "postId": 14,
    "timestampMs": 1564744498189,
    "username": "dl-proto",
  },
]
`;
